# marburg

./: README.md  data_dictionary.yml
.github/workflows/: ingestion_deploy.yml  report_deploy.yml  report_tests.yml  s3_ui_deploy.yml  s3_ui_tests.yml
s3_ui/: README.md  pyproject.toml  run.py  setup_localstack.py  test_data.py
s3_ui/templates/: folder.html  index.html
scripts/: README.md
scripts/ingestion/: docker-compose-test.yml  docker-compose.yml  pyproject.toml  run.py  setup.py  test_data.csv  test_run.py
scripts/report/: docker-compose-test.yml  docker-compose.yml  index_template.html  pyproject.toml  report.py  run.sh  setup.py  test.sh  test_data.csv  test_report.py
