[tool.poetry]
name = "marburg-report"
version = "0.1.0"
description = "Marburg 2023 report generator"
authors = ["Global.health team <info@global.health>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.5.0"
numpy = "^1.21.0"
chevron = "^0.14.0"
plotly = "^5.14.0"
requests = "^2.28.2"
boto3 = "^1.26.105"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
